--- a/src/components/tabs/AboutTab.astro
+++ b/src/components/tabs/AboutTab.astro
@@ -97,7 +97,23 @@ import { clients } from "../../data/clients";
       clients.map((c) => (
         <li class="clients-item">
           <a href={c.url} target="_blank" rel="noopener">
-            <img src={c.logo} alt={c.name} class={c.logoClass} />
+            {(() => {
+              const hasVariants = (c as any).lightLogo && (c as any).darkLogo;
+              const light = hasVariants
+                ? (c as any).lightLogo
+                : (c as any).logo;
+              const dark = hasVariants ? (c as any).darkLogo : (c as any).logo;
+              return (
+                <img
+                  src={light}
+                  alt={c.name}
+                  class={c.logoClass}
+                  data-theme-img
+                  data-src-light={light}
+                  data-src-dark={dark}
+                />
+              );
+            })()}
           </a>
         </li>
       ))
