--- a/src/components/SiteSidebar.astro
+++ b/src/components/SiteSidebar.astro
@@ -11,7 +11,7 @@ import { avatar, name, role, email, location, socials } from "../data/site";
       <h1 class="name" title={name}>{name}</h1>
       <p class="title">{role}</p>
     </div>
-    <button class="info_more-btn" data-sidebar-btn>
+    <button class="info_more-btn" type="button" data-sidebar-btn>
       <span>Show Contacts</span>
       <ion-icon name="chevron-down"></ion-icon>
     </button>
