--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -43,7 +43,7 @@
         padding: 10px 16px;
         border-radius: 8px;
         text-decoration: none;
-        color: var(--smoky-black);
+        color: var(--white-1);
         background: var(--orange-yellow-crayola);
         font-weight: var(--fw-500);
       }
