--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -61,8 +61,8 @@ const jsonLd = {
     </script>
 
     <!-- favicon -->
-    <link rel="icon" href="/assets/images/ts-favicon.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="/assets/images/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/images/me-avatar.png" type="image/png" />
+    <link rel="alternate icon" href="/assets/images/me-avatar.png" type="image/png" />
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
